Fixed header text alignment in configurator modal

--- a/css/modal.css
+++ b/css/modal.css
@@ -217,7 +217,6 @@ body {
   margin-bottom: 4.8rem;
   font-size: 5.2rem;
   font-weight: 700;
-  /* text-align: center; */
   margin-left: 8rem;
 }
 
@@ -812,6 +811,10 @@ body {
     grid-template-columns: 1fr;
   }
 
+  .modal-configurator-form-title {
+    font-size: 4.4rem;
+  }
+
   .modal-configurator-section-item.medium {
     grid-template-columns: 1fr;
     gap: 0;
@@ -840,6 +843,11 @@ body {
 
   .modal-configurator-form {
     padding: 6rem 2.4rem;
+  }
+
+  .modal-configurator-form-title {
+    margin-left: 0;
+    text-align: center;
   }
 
   .modal-checkout-form {
